[package]
name = "relay-auth"
authors = ["Sentry <oss@sentry.io>"]
description = "Authentication and crypto for Relay"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "24.2.0"
edition = "2021"
license-file = "../LICENSE.md"
publish = false
build = "build.rs"

[dependencies]
chrono = { workspace = true }
data-encoding = "2.3.3"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
hmac = "0.12.1"
rand = { workspace = true }
relay-common = { path = "../relay-common" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.6"
thiserror = { workspace = true }
uuid = { workspace = true }
