[package]
name = "relay-auth"
authors = ["Sentry <oss@sentry.io>"]
description = "Authentication and crypto for Relay"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "24.7.0"
edition = "2021"
license-file = "../LICENSE.md"
publish = false
build = "build.rs"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true, features = ["clock"] }
data-encoding = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
hmac = { workspace = true }
rand = { workspace = true }
relay-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
