[package]
name = "relay-aws-extension"
authors = ["Sentry <oss@sentry.io>"]
description = "AWS extension implementation for Sentry's AWS Lambda layer"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "23.7.1"
edition = "2021"
license-file = "../LICENSE"
publish = false

[dependencies]
relay-log = { path = "../relay-log" }
relay-system = { path = "../relay-system" }
reqwest = { version = "0.11.1", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "1.28.0" }
