[package]
name = "relay-aws-extension"
authors = ["Sentry <oss@sentry.io>"]
description = "AWS extension implementation for Sentry's AWS Lambda layer"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "23.9.0"
edition = "2021"
license-file = "../LICENSE"
publish = false

[dependencies]
relay-log = { path = "../relay-log" }
relay-system = { path = "../relay-system" }
reqwest = { version = "0.11.1", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
