[package]
name = "relay-aws-extension"
authors = ["Sentry <oss@sentry.io>"]
description = "AWS extension implementation for Sentry's AWS Lambda layer"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "24.4.1"
edition = "2021"
license-file = "../LICENSE.md"
publish = false

[lints]
workspace = true

[dependencies]
relay-log = { workspace = true }
relay-system = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
