[package]
name = "relay-base-schema"
authors = ["Sentry <oss@sentry.io>"]
description = "Basic types for Relay's API schema used across multiple services"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "23.11.2"
edition = "2021"
license-file = "../LICENSE.md"
publish = false

[dependencies]
regex = { workspace = true }
relay-common = { path = "../relay-common" }
relay-protocol = { path = "../relay-protocol" }
schemars = { workspace = true, optional = true }
serde = { workspace = true }

[features]
default = []
jsonschema = ["dep:schemars", "relay-protocol/jsonschema"]
