[package]
name = "relay-base-schema"
authors = ["Sentry <oss@sentry.io>"]
description = "Basic types for Relay's API schema used across multiple services"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "24.3.0"
edition = "2021"
license-file = "../LICENSE.md"
publish = false

[lints]
workspace = true

[dependencies]
regex = { workspace = true }
relay-common = { workspace = true }
relay-protocol = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = []
jsonschema = ["dep:schemars", "relay-protocol/jsonschema"]
