[package]
name = "relay-cabi"
version = "0.8.29"
authors = ["Sentry <oss@sentry.io>"]
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
description = "Exposes some internals of the relay to C."
edition = "2021"
license-file = "../LICENSE"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
chrono = { version = "0.4.24", default-features = false, features = ["std"] }
json-forensics = { version = "0.1.1" }
lru = "0.9.0"
once_cell = "1.13.1"
regex = "1.9.1"
relay-auth = { path = "../relay-auth" }
relay-base-schema = { path = "../relay-base-schema" }
relay-common = { path = "../relay-common" }
relay-dynamic-config = { path = "../relay-dynamic-config" }
relay-event-normalization = { path = "../relay-event-normalization" }
relay-event-schema = { path = "../relay-event-schema" }
relay-ffi = { path = "../relay-ffi" }
relay-pii = { path = "../relay-pii" }
relay-protocol = { path = "../relay-protocol" }
relay-sampling = { path = "../relay-sampling" }
sentry-release-parser = { version = "1.3.2", features = ["serde"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
