[package]
name = "relay-cabi"
version = "0.8.38"
authors = ["Sentry <oss@sentry.io>"]
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
description = "Exposes some internals of the relay to C."
edition = "2021"
license-file = "../LICENSE.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
chrono = { workspace = true }
json-forensics = { version = "0.1.1" }
lru = "0.9.0"
once_cell = { workspace = true }
regex = { workspace = true }
relay-auth = { path = "../relay-auth" }
relay-base-schema = { path = "../relay-base-schema" }
relay-common = { path = "../relay-common" }
relay-dynamic-config = { path = "../relay-dynamic-config" }
relay-event-normalization = { path = "../relay-event-normalization" }
relay-event-schema = { path = "../relay-event-schema" }
relay-ffi = { path = "../relay-ffi" }
relay-pii = { path = "../relay-pii" }
relay-protocol = { path = "../relay-protocol" }
relay-sampling = { path = "../relay-sampling" }
sentry-release-parser = { version = "1.3.2", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
