[package]
name = "relay-cardinality"
authors = ["Sentry <oss@sentry.io>"]
description = "Metrics Cardinality Limiter"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "24.5.0"
edition = "2021"
license-file = "../LICENSE"
publish = false
autobenches = false

[features]
default = []
redis = ["relay-redis/impl"]

[lints]
workspace = true

[dependencies]
hash32 = { workspace = true }
hashbrown = { workspace = true }
parking_lot = { workspace = true }
relay-base-schema = { workspace = true }
relay-common = { workspace = true }
relay-log = { workspace = true }
relay-redis = { workspace = true }
relay-statsd = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[[bench]]
name = "redis"
harness = false
