[package]
name = "relay-cardinality"
authors = ["Sentry <oss@sentry.io>"]
description = "Metrics Cardinality Limiter"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "25.12.1"
edition = "2024"
license-file = "../LICENSE"
publish = false
autobenches = false

[features]
default = []
redis = ["relay-redis/impl"]

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
hash32 = { workspace = true }
hashbrown = { workspace = true }
parking_lot = { workspace = true }
relay-base-schema = { workspace = true }
relay-common = { workspace = true }
relay-log = { workspace = true }
relay-redis = { workspace = true }
relay-statsd = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

[[bench]]
name = "redis"
harness = false
