[package]
name = "relay-cogs"
authors = ["Sentry <oss@sentry.io>"]
description = "Relay cost of goods module"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "24.2.0"
edition = "2021"
license-file = "../LICENSE"
publish = false
autobenches = false
