[package]
name = "relay-common"
authors = ["Sentry <oss@sentry.io>"]
description = "Common utilities and crate re-exports for Relay"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "24.5.1"
edition = "2021"
license-file = "../LICENSE.md"
publish = false

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
globset = { workspace = true }
lru = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
sentry-types = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_test = { workspace = true }
