[package]
name = "relay-config"
authors = ["Sentry <oss@sentry.io>"]
description = "Configuration for the Relay CLI and server"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "20.12.1"
edition = "2018"
license-file = "../LICENSE"
publish = false

[features]
default = []
processing = []

[dependencies]
failure = "0.1.8"
human-size = "0.4.1"
num_cpus = "1.13.0"
relay-auth = { path = "../relay-auth" }
relay-common = { path = "../relay-common" }
relay-log = { path = "../relay-log" }
relay-redis = { path = "../relay-redis" }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
serde_yaml = "0.8.13"
url = "2.1.1"
