[package]
name = "relay-config"
authors = ["Sentry <oss@sentry.io>"]
description = "Configuration for the Relay CLI and server"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "23.10.0"
edition = "2021"
license-file = "../LICENSE"
publish = false

[features]
default = []
processing = []

[dependencies]
anyhow = { workspace = true }
human-size = "0.4.1"
num_cpus = "1.13.0"
relay-auth = { path = "../relay-auth" }
relay-common = { path = "../relay-common" }
relay-kafka = { path = "../relay-kafka" }
relay-log = { path = "../relay-log", features = ["init"] }
relay-metrics = { path = "../relay-metrics" }
relay-redis = { path = "../relay-redis" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
