[package]
name = "relay-config"
authors = ["Sentry <oss@sentry.io>"]
description = "Configuration for the Relay CLI and server"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "24.7.0"
edition = "2021"
license-file = "../LICENSE.md"
publish = false

[features]
default = []
processing = []

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
human-size = { workspace = true }
num_cpus = { workspace = true }
relay-auth = { workspace = true }
relay-common = { workspace = true }
relay-kafka = { workspace = true }
relay-log = { workspace = true, features = ["init"] }
relay-metrics = { workspace = true }
relay-redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
