[package]
name = "relay-crash"
authors = ["Sentry <oss@sentry.io>"]
description = "Native crash reporting for Relay"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "23.7.1"
edition = "2021"
build = "build.rs"
license-file = "../LICENSE"
publish = false

[dependencies]

[build-dependencies]
bindgen = "0.64.0"
cmake = { version = "0.1.46" }
