[package]
name = "relay-crash"
authors = ["Sentry <oss@sentry.io>"]
description = "Native crash reporting for Relay"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "24.8.0"
edition = "2021"
build = "build.rs"
license-file = "../LICENSE.md"
publish = false

[lints]
workspace = true

[dependencies]

[build-dependencies]
bindgen = { workspace = true }
cmake = { workspace = true }
