[package]
name = "relay-dashboard"
authors = ["Sentry <oss@sentry.io>"]
description = "A dashboard to debug Relay locally"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "23.11.0"
edition = "2021"
license-file = "../LICENSE"
publish = false

[lints]
workspace = true

[dependencies]
ansi-to-html = "0.1.3"
futures = "0.3.28"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
gloo-console = "0.3.0"
gloo-net = "0.4.0"
once_cell = "1.18.0"
reqwasm = { version = "0.5.0" }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Location"] }
tokio = { version = "1.28.0", features = ["sync"] }
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
