[package]
name = "relay-dashboard"
version = "23.12.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-html = "0.1.3"
futures = "0.3.28"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
gloo-console = "0.3.0"
gloo-net = "0.4.0"
once_cell = "1.18.0"
reqwasm = { version = "0.5.0" }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Location"] }
tokio = { version = "1.28.0", features = ["sync"] }
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
