[package]
name = "relay-dashboard"
version = "24.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
ansi-to-html = { workspace = true }
futures = { workspace = true }
instant = { workspace = true, features = ["wasm-bindgen"] }
gloo-console = { workspace = true }
gloo-net = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Window", "Document", "Location"] }
yew = { workspace = true, features = ["csr"] }
yew-router = { workspace = true }
