[package]
name = "relay-dynamic-config"
authors = ["Sentry <oss@sentry.io>"]
description = "Dynamic configuration passed down from sentry"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "24.1.2"
edition = "2021"
license-file = "../LICENSE.md"
publish = false

[features]
default = []

[dependencies]
anyhow = { workspace = true }
assert-json-diff = "2.0.2"
relay-auth = { path = "../relay-auth" }
relay-base-schema = { path = "../relay-base-schema" }
relay-cardinality = { path = "../relay-cardinality" }
relay-common = { path = "../relay-common" }
relay-event-normalization = { path = "../relay-event-normalization" }
relay-filter = { path = "../relay-filter" }
relay-log = { path = "../relay-log" }
relay-pii = { path = "../relay-pii" }
relay-protocol  = { path = "../relay-protocol" }
relay-quotas = { path = "../relay-quotas" }
relay-sampling = { path = "../relay-sampling" }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
similar-asserts = { workspace = true }
