[package]
name = "relay-event-derive"
authors = ["Sentry <oss@sentry.io>"]
description = "Derive for visitor traits on the Event schema"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "23.8.0"
edition = "2021"
license-file = "../LICENSE"
publish = false

[dependencies]
quote = "1.0.2"
syn = "1.0.14"
synstructure = "0.12.3"
proc-macro2 = "1.0.8"

[lib]
proc-macro = true
