[package]
name = "relay-event-derive"
authors = ["Sentry <oss@sentry.io>"]
description = "Derive for visitor traits on the Event schema"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "24.4.2"
edition = "2021"
license-file = "../LICENSE.md"
publish = false

[lints]
workspace = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
synstructure = { workspace = true }
proc-macro2 = { workspace = true }

[lib]
proc-macro = true
