[package]
name = "relay-event-normalization"
authors = ["Sentry <oss@sentry.io>"]
description = "Event normalization and processing"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "23.12.1"
edition = "2021"
license-file = "../LICENSE.md"
publish = false

[dependencies]
bytecount = "0.6.0"
chrono = { workspace = true, features = ["clock"] }
dynfmt = { version = "0.1.4", features = ["python", "curly"] }
itertools = { workspace = true }
maxminddb = "0.23.0"
md5 = "0.7.0"
once_cell = { workspace = true }
regex = { workspace = true }
relay-base-schema = { path = "../relay-base-schema" }
relay-common = { path = "../relay-common" }
relay-event-schema = { path = "../relay-event-schema" }
relay-log = { path = "../relay-log" }
relay-metrics = { path = "../relay-metrics" }
relay-protocol = { path = "../relay-protocol" }
relay-statsd = { path = "../relay-statsd" }
relay-ua = { path = "../relay-ua" }
sentry-release-parser = "1.3.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7.1"
smallvec = { workspace = true }
# Use a fork of sqlparser until https://github.com/sqlparser-rs/sqlparser-rs/pull/1065 gets merged:
sqlparser = { git = "https://github.com/getsentry/sqlparser-rs.git", rev = "0bb7ec6ce661ecfc468f647fd1003b7839d37fa6", features = [
    "visitor",
] }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
relay-protocol = { path = "../relay-protocol", features = ["test"] }
similar-asserts = { workspace = true }

[features]
default = ["mmap"]
mmap = ["maxminddb/mmap"]
