[package]
name = "relay-event-normalization"
authors = ["Sentry <oss@sentry.io>"]
description = "Event normalization and processing"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "24.5.1"
edition = "2021"
license-file = "../LICENSE.md"
publish = false

[lints]
workspace = true

[dependencies]
bytecount = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
dynfmt = { workspace = true, features = ["python", "curly"] }
itertools = { workspace = true }
maxminddb = { workspace = true }
md5 = { workspace = true }
once_cell = { workspace = true }
psl = { workspace = true }
regex = { workspace = true }
relay-base-schema = { workspace = true }
relay-common = { workspace = true }
relay-event-schema = { workspace = true }
relay-log = { workspace = true }
relay-protocol = { workspace = true }
relay-statsd = { workspace = true }
relay-ua = { workspace = true }
sentry-release-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
smallvec = { workspace = true }
sqlparser = { workspace = true, features = ["visitor"] }

thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
relay-protocol = { workspace = true, features = ["test"] }
similar-asserts = { workspace = true }

[features]
default = ["mmap"]
mmap = ["maxminddb/mmap"]
