[package]
name = "relay-event-schema"
authors = ["Sentry <oss@sentry.io>"]
description = "Event schema (Error, Transaction, Security) and types for event processing"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "24.8.0"
edition = "2021"
license-file = "../LICENSE.md"
publish = false

[lints]
workspace = true

[dependencies]
bytecount = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
cookie = { workspace = true, features = ["percent-encode"] }
debugid = { workspace = true, features = ["serde"] }
enumset = { workspace = true }
relay-common = { workspace = true }
relay-base-schema = { workspace = true }
relay-event-derive = { workspace = true }
relay-jsonschema-derive = { workspace = true, optional = true }
relay-protocol = { workspace = true, features = ["derive"] }
schemars = { workspace = true, optional = true }
sentry-release-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
relay-protocol = { workspace = true, features = ["test"] }
similar-asserts = { workspace = true }

[features]
jsonschema = [
    "relay-base-schema/jsonschema",
    "relay-protocol/jsonschema",
    "dep:relay-jsonschema-derive",
    "dep:schemars",
]
