[package]
name = "relay-feature-flags"
authors = ["Sentry <oss@sentry.io>"]
description = "Feature flagging service for Relay"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "22.8.0"
edition = "2018"
license-file = "../LICENSE"
publish = false

[dependencies]
relay-common = { path = "../relay-common" }
relay-general = { path = "../relay-general" }
relay-log = { path = "../relay-log" }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
rand = "0.6.5"
rand_pcg = "0.1.2"

[dev-dependencies]
insta = { version = "1.1.0", features = ["ron"] }
