[package]
name = "relay-ffi-macros"
authors = ["Sentry <oss@sentry.io>"]
description = "Macros for error handling in FFI bindings"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "23.12.1"
edition = "2021"
license-file = "../LICENSE.md"
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.39", features = ["fold", "full"] }
quote = "1.0.6"
