[package]
name = "relay-ffi-macros"
authors = ["Sentry <oss@sentry.io>"]
description = "Macros for error handling in FFI bindings"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "24.7.0"
edition = "2021"
license-file = "../LICENSE.md"
publish = false

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { workspace = true, features = ["fold", "full"] }
quote = { workspace = true }
