[package]
name = "relay-ffi"
authors = ["Sentry <oss@sentry.io>"]
description = "Utilities for error handling in FFI bindings"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "23.12.0"
edition = "2021"
license-file = "../LICENSE.md"
publish = false

[dependencies]
anyhow = { workspace = true }
relay-ffi-macros = { path = "../relay-ffi-macros" }
