[package]
name = "relay-ffi"
authors = ["Sentry <oss@sentry.io>"]
description = "Utilities for error handling in FFI bindings"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "25.12.0"
edition = "2024"
license-file = "../LICENSE.md"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
relay-ffi-macros = { workspace = true }
