[package]
name = "relay-filter"
authors = ["Sentry <oss@sentry.io>"]
description = "Inbound data filters for Relay"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "23.8.0"
edition = "2021"
license-file = "../LICENSE"
publish = false

[dependencies]
ipnetwork = "0.20.0"
once_cell = "1.13.1"
regex = "1.9.1"
relay-common = { path = "../relay-common" }
relay-event-schema = { path = "../relay-event-schema" }
relay-protocol = { path = "../relay-protocol" }
relay-ua = { path = "../relay-ua" }
serde = { version = "1.0.114", features = ["derive"] }
url = "2.1.1"

[dev-dependencies]
insta = { version = "1.19.0", features = ["json"] }
serde_json = "1.0.55"
