[package]
name = "relay-filter"
authors = ["Sentry <oss@sentry.io>"]
description = "Inbound data filters for Relay"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "24.1.2"
edition = "2021"
license-file = "../LICENSE.md"
publish = false

[dependencies]
ipnetwork = "0.20.0"
once_cell = { workspace = true }
regex = { workspace = true }
relay-common = { path = "../relay-common" }
relay-event-schema = { path = "../relay-event-schema" }
relay-protocol = { path = "../relay-protocol" }
relay-ua = { path = "../relay-ua" }
serde = { workspace = true }
url = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
