[package]
name = "relay-filter"
authors = ["Sentry <oss@sentry.io>"]
description = "Inbound data filters for Relay"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "24.4.1"
edition = "2021"
license-file = "../LICENSE.md"
publish = false

[lints]
workspace = true

[dependencies]
ipnetwork = { workspace = true }
once_cell = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
relay-common = { workspace = true }
relay-event-schema = { workspace = true }
relay-protocol = { workspace = true }
relay-ua = { workspace = true }
serde = { workspace = true }
url = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
